API generation and missing javadoc
